# prism-mw

./: CMakeLists.txt  LICENSE  README.md
example/BorderDemo/: BorderDemo.aps  BorderDemo.cpp  BorderDemo.h  BorderDemo.vcb  BorderDemo.vcc  BorderDemo.vcl  BorderDemo.vco  BorderDemoDlg.h  StdAfx.cpp
example/StaticDemo/: CompA.cpp  CompB.cpp  Integer.cpp  Integer.h  StaticDemo.aps  StaticDemo.cpp  StaticDemo.rc  StaticDemo.vco  StaticDemo.vcw  StaticDemoDlg.cpp  StaticDemoDlg.h  StdAfx.cpp  resource.h
include/prism-mw/: address.h  dispatcher.h  event.h  fifo_scheduler.h  object.h  round_robin_dispatcher.h  scheduler.h
script/: build_and_test.sh
src/: address.cpp  event.cpp  fifo_scheduler.cpp  round_robin_dispatcher.cpp
src/BorderDemo/: BorderDemo.rc  BorderDemo.vcp  BorderDemo.vcw  BorderDemoDlg.cpp  CompA.cpp  CompA.h  ReadMe.txt  StdAfx.h  resource.h
src/FWDLL/: AcceptConnectionThread.cpp  AcceptConnectionThread.h  Address.cpp  Address.h  Architecture.cpp  Architecture.h  ArchitectureAdapter.cpp  ArchitectureAdapter.h  ArchitectureEvent.cpp  ArchitectureEvent.h  BottomBorderConnector.cpp  BottomBorderConnector.h  Brick.cpp  Brick.h  BrickThread.cpp  BrickThread.h  C2Object.cpp  C2Object.h  Component.cpp  Component.h  ComponentThread.cpp  ComponentThread.h  Connection.cpp  Connection.h  Connector.cpp  Connector.h  ConnectorThread.cpp  ConnectorThread.h  DetectDisconnectionThread.cpp  DetectDisconnectionThread.h  Dispatch.cpp  Dispatch.h  (+52 more)
test/: CMakeLists.txt  address_test.cpp  main.cpp
test/include/: my_math.h
test/src/: my_math.cpp  my_math_test.cpp
(+12 files in other folders)
